--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-server.port=${port:8081}
+#Porta do TomCat (basta descomentar e alterar)
+#server.port=${port:8080} 
 
 #H2
 spring.h2.console.enabled=true
