Inserindo nova Categoria com POST

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #Porta do TomCat (basta descomentar e alterar)
-#server.port=${port:8080} 
+server.port=${port:8081} 
 
 #H2
 spring.h2.console.enabled=true
